SBVTestSuite/TestSuite/CompileTests/SCase/SCase16.stderr
SCase16.hs:11:14: error: [GHC-39584]
    " SCase16.hs:13:16-20: sCase: Non-exhaustive match:
        Type       : Expr
        Constructor: Num i | i .< 3
      NB. Guarded match might fail.

    " In the quasi-quotation:
        [sCase|Expr e of
               Zero           -> 0
               Num i | i .< 3 -> i
               Var s          -> ite (s .== "a") 1 2
               Add a b        -> t e + t b
               Let _   _a  b  -> t b
      |]
   |
11 | t e = [sCase|Expr e of
   |              ^^^^^^^^^...

